--- a/test/carousel.css
+++ b/test/carousel.css
@@ -142,6 +142,14 @@
     display: block;
 }
 
+.slide.next {
+    left: 100% !important;
+}
+
+.slide.prev {
+    left: -100% !important;
+}
+
 .slide.show {
     left:0;
     overflow:visible;
